# Embedded-Control-Architecture

./: .gitignore  CMakeLists.txt  README.md
Arduino_project/EngineOverheatProtection/: EngineOverheatProtection.ino
Arduino_project/EngineOverheatProtection/src/framework/: manager.h  module_interface.h
Arduino_project/EngineOverheatProtection/src/signals/: signal.h
Arduino_project/EngineOverheatProtection/src/utility/: increment_timer.h  lookup_table_1d.h
Arduino_project/OilTempWarningDemo/src/framework/: module_interface.h
Arduino_project/OilTempWarningDemo/src/modules/: oil_temp_warning.cpp  oil_temp_warning.h
Arduino_project/OilTempWarningDemo/src/utility/: hysteresis.h  increment_timer.h
Arduino_project/OilTempWarningDemo/version management/1/: OilTempWarningDemo.ino
arduino_uno/OilTempWarningDemo/: OilTempWarningDemo.ino  OilTempWarningDemo_3.ino
arduino_uno/OilTempWarningDemo/framework/: manager.h  module_interface.h
arduino_uno/OilTempWarningDemo/modules/: oil_temp_warning.cpp  oil_temp_warning.h
arduino_uno/OilTempWarningDemo/signals/: signal.h
arduino_uno/OilTempWarningDemo/src/framework/: manager.h
arduino_uno/OilTempWarningDemo/src/modules/: fan_cooling_control.cpp  fan_cooling_control.h  oil_temp_warning.cpp  oil_temp_warning.h
arduino_uno/OilTempWarningDemo/src/signals/: signal.h
arduino_uno/OilTempWarningDemo/utility/: hysteresis.h  increment_timer.h
arduino_uno/OilTempWarningDemo/version management/2/: OilTempWarningDemo.ino
assembly/: instantiation.h  instantiation_practice.h
docs/: CIRCUIT_NOTES_fixed.md  Git_OPERATION_MANUAL.md  LINUX_NOTES.md  TROUBLESHOOTING.md  TROUBLESHOOTING_fixed.md  circuit-notes.md  troubleshooting.md
examples/: oil_temp-fan and torque state.md
framework/: manager.h  module_interface.h
modules/cooling_fan_control/include/: coolingFanControl.h  cooling_fan_control.h
modules/cooling_fan_control/src/: wlCoolingFanControl.c  wl_cooling_fan_control.cc
modules/engine_overheat_protection/include/: engine_overheat_protection.h
modules/engine_overheat_protection/src/: engine_overheat_protection.cc
modules/gear_display_facade/include/: gear_display_facade.h  gear_types.h
modules/gear_display_facade/src/: gear_display_facade.cc
modules/hydraulic_oil_warning/include/: hydraulic_oil_warning.h
modules/hydraulic_oil_warning/src/: hydraulic_oil_warning.cc
modules/instantiation_practice/include/: oil_temp_warning.h  speed_monitor.h
modules/vehicle_speed_control/include/: vehicleSpeedControl.h  vehicle_speed_control.h
modules/vehicle_speed_control/src/: vehicleSpeedControl.c  vehicle_speed_control.cc
modules/wl_cooling_fan_control/include/: wlCoolingFanControl.h  wl_cooling_fan_control.h
modules/wl_vehicle_speed/include/: wlVehicleSpeed.h  wl_vehicle_speed.h
modules/wl_vehicle_speed/src/: wl_vehicle_speed.cc
signals/: signal.h
tests/gear_display_facade/: CMakeLists.txt  main.cpp
tests/hydraulic_oil_warning/: CMakeLists.txt
tests/instantiation_practice/: CMakeLists.txt  main.cpp
tests/module/cooling_fan_control/: CMakeLists.txt  print_based_tests.cpp
tests/module/engine_overheat_protection/: CMakeLists.txt  assert_based_tests.cpp  main copy.cpp  main.cpp  print_based_tests.cpp
tests/module/gear_display_facade/: CMakeLists.txt  main.cpp
tests/module/hydraulic_oil_warning/: CMakeLists.txt  main.cpp  print_based_tests.cpp
tests/module/instantiation_practice/: CMakeLists.txt
tests/module/vehicle_speed_control/: CMakeLists.txt  print_based_tests.cpp
tests/module/wl_cooling_fan_control/: CMakeLists.txt  main.cpp  print_based_tests.cpp
tests/module/wl_vehicle_speed/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  test_hysteresis.cpp  test_increment_timer.cpp  test_lookup_table_1d.cpp
utility/: hysteresis.h  increment_timer.h  increment_timer_for_arduino_project.h  lookup_table_1d.h
